# jasmin

./: .gitignore  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  requirements.txt  setup.cfg
.envs/.local/: .jasmin  .postgres
.envs/.production/: .django
compose/local/django/: Dockerfile
compose/local/jasmin/: Dockerfile  entrypoint  start
compose/production/django/: Dockerfile  entrypoint
compose/production/postgres/: Dockerfile
compose/production/traefik/: traefik.yml
docker/: Dockerfile.restapi.alpine  restapi-docker-entrypoint.sh
docker/prometheus/config/: prometheus.yml
jasmin/config/: __init__.py
jasmin/interceptor/: interceptor.py
jasmin/managers/: clients.py  configs.py  content.py  dlr.py  listeners.py
jasmin/protocols/rest/: __init__.py  api.py  config.py  tasks.py
jasmin/protocols/smpp/: configs.py  error.py  factory.py  operations.py  pb.py  protocol.py  proxies.py  services.py  validation.py
jasmin/queues/: configs.py  factory.py  protocol.py
jasmin/redis/: client.py
jasmin/routing/: jasminApi.py
jasmin/tools/spread/: pb.py
misc/doc/sources/installation/: docker-compose.grafana.yml  docker-compose.yml  index.rst  prometheus.yml
misc/secrets/: telnet_pw.txt
requirements/: local.txt  production.txt
