[metadata]
name = jasmin
version = 0.11.0
author = Jookies LTD
author_email = jasmin@jookies.net
url = https://www.jasminsms.com
license = Apache-2.0
description = Jasmin is a very complete open source SMS Gateway with many enterprise-class features.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = jasmin, sms, messaging, smpp, smsc, smsgateway
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Twisted
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Topic :: Communications
    Topic :: Communications :: Telephony
project_urls =
    Documentation = http://docs.jasminsms.com/
    Source = https://github.com/jookies/jasmin
    Tracker = https://github.com/jookies/jasmin/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8

install_requires =
    pyasn1~=0.5.0
    Twisted~=23.10.0
    treq~=23.11.0
    pyparsing~=3.1.1
    python-dateutil~=2.8.2
    service_identity~=23.1.0
    lockfile~=0.12.2
    falcon~=3.1.1
    txredisapi~=1.4.7
    tabulate~=0.8.7
    txAMQP3~=0.9.4
    smpp.pdu3~=0.6
    smpp.twisted3~=0.8
    python-messaging~=0.5.13
    cryptography~=41.0.5
    pyopenssl~=23.3.0
    celery~=5.3.5
    redis~=5.0.1
    requests~=2.31.0
    python-mimeparse~=1.6.0
    prometheus-client~=0.18.0

tests_require =
    pytest

scripts =
    jasmin/bin/jasmind.py
    jasmin/bin/interceptord.py
    jasmin/bin/dlrd.py
    jasmin/bin/dlrlookupd.py

[options.extras_require]
test =
    pytest

[options.packages.find]
exclude =
    tests
